Run workflow only when .tgz files are changed or added.
Signed-off-by: Satish Gaikwad <satish.gaikwad@luminartech.com>

--- a/.github/workflows/helm-update-index.yaml
+++ b/.github/workflows/helm-update-index.yaml
@@ -2,8 +2,8 @@ name: '[HELM] Update Helm Index'
 on:
   push:
     branches: [ main ]
-    # paths:
-    #   - '**.tgz'
+    paths:
+      - '**.tgz'
 jobs:
   update-index:
     runs-on: ubuntu-20.04
