--- a/.github/workflows/helm-update-index.yaml
+++ b/.github/workflows/helm-update-index.yaml
@@ -6,7 +6,7 @@ on:
       - '**.tgz'
 jobs:
   update-index:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     steps:
       - name: Git Checkout
         uses: actions/checkout@v3
@@ -23,7 +23,7 @@ jobs:
           git config --global user.name "CI Bot"
           helm repo index . --url=${{ secrets.HELM_REPO_URL }} --merge ./index.yaml
           helm plugin install https://github.com/halkeye/helm-repo-html
-          helm repo-html --template ./index.html.tpl --input ./index.yaml --output ./index.html 
+          helm repo-html --template ./index.html.tpl --input ./index.yaml --output ./index.html
           git add index.yaml index.html
           git commit -m "[ CI Bot ] Updated helm chart index"
           git push
